# mag3d

./: CMakeLists.txt  README.md
src/: FileLoader.cpp  FileLoader.h  OpenGLUtils.cpp  OpenGLUtils.h  ScopedArrayBuffer.h  camera.cpp  camera.hpp  file_loader.cpp  file_loader.h  gui_handler.cpp  gui_handler.hpp  load_shader.cpp  load_shader.hpp  main.cpp  opengl_utils.cpp  opengl_utils.h  scoped_array_buffer.h  shader.cpp  shader.h  solar_system.cpp  solar_system.h  solar_system_calculator.cpp  solar_system_calculator.h  solar_system_graphics.cpp  solar_system_graphics.h
src/shaders/: gaussian_blur.frag  passthrough.vert  path.frag  path.vert  planet.frag  planet.vert  texture.frag  threshold.frag  triangle.frag  triangle.vert
test/: test_camera.cpp  test_file_loader.cpp  test_solar_system.cpp  test_solar_system_calculator.cpp
